# LeSing

./: .gitignore  CI_PIPELINE_PROPOSAL.md  CLAUDE.md  GITHUB_ISSUE_CI_PIPELINE.md  OVERVIEW.md  PLAN.md  README.md
.github/workflows/: python-ci-3d-pipeline.yml  python-ci.yml
.specify/memory/: constitution.md
backend/: CI_PIPELINE.md  CODE_GUIDELINES.md
backend/ai-generation/: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/ai-generation/config/: settings.py
backend/ai-generation/examples/: README.md  basic_usage.py  styled_usage.py  validation_usage.py
backend/ai-generation/src/: __init__.py  exceptions.py  generator.py  logging_config.py  models.py
backend/ai-generation/src/api/: openai_client.py
backend/ai-generation/src/prompt/: optimizer.py
backend/ai-generation/src/storage/: manager.py
backend/ai-generation/src/validation/: quality_validator.py  validator.py
backend/ai-generation/tests/: __init__.py  conftest.py
backend/ai-generation/tests/contract/: test_generator_contract.py  test_style_contract.py  test_validation_contract.py
backend/ai-generation/tests/integration/: test_basic_generation.py  test_quality_retry.py  test_styled_generation.py
backend/ai-generation/tests/unit/: test_openai_client.py  test_prompt_optimizer.py  test_quality_validator.py  test_retry_logic.py  test_storage_manager.py  test_validator.py
backend/model-converter/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/model-converter/src/: converter.py  quality_workflow.py  repairer.py  validator.py  vectorizer.py
backend/model-converter/src/metrics/: __init__.py  color_fidelity.py  edge_iou.py  ssim.py
backend/model-converter/tests/contract/: test_3mf_schema.py  test_image_schema.py  test_svg_schema.py
backend/model-converter/tests/fixtures/: generate_test_images.py
backend/model-converter/tests/integration/: test_end_to_end.py  test_image_to_vector.py  test_mesh_validation.py  test_quality_retry.py  test_quality_validation.py  test_vector_to_3d.py
backend/model-converter/tests/unit/: test_converter.py  test_repairer.py  test_validator.py  test_vectorizer.py
backend/model-converter/tests/unit/metrics/: test_color_fidelity.py  test_edge_iou.py  test_overall_quality.py  test_ssim.py
backend/printer-control/: README.md  pyproject.toml  requirements.txt
backend/printer-control/config/printer_profiles/: bambu_h2d.json
backend/printer-control/src/printer_control/: __init__.py  agent.py  config.py  exceptions.py  models.py  printer.py  queue.py
backend/printer-control/tests/: conftest.py
backend/printer-control/tests/contract/: __init__.py
backend/printer-control/tests/integration/: __init__.py
backend/printer-control/tests/unit/: __init__.py  test_models.py  test_queue.py
backend/shared/: exceptions.py  file_io.py  logging_config.py  models.py  requirements.txt
backend/slicer/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/slicer/src/config/: bambu_h2d_petg.ini  bambu_h2d_pla.ini
investigations/: project_plan_outline.md
specs/001-ai-image-generation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-image-generation/checklists/: requirements.md
specs/001-ai-image-generation/contracts/: api-contract.md
specs/002-3d-model-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-3d-model-pipeline/checklists/: requirements.md
specs/002-3d-model-pipeline/contracts/: formats.md
specs/003-printer-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-printer-control/checklists/: requirements.md
specs/003-printer-control/contracts/: api-contract.md  job-result.schema.json  job-status.schema.json  print-request.schema.json  printer-status.schema.json
