[project]
name = "ai-generation"
version = "0.1.0"
description = "AI-powered text-to-image generation for name signs using DALL-E 3"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.52.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "C90", # mccabe complexity
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "contract: Contract tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "pydantic_settings.*",
    "PIL.*",
    "httpx.*",
    "openai.*",
    "tenacity.*",
    "structlog.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "config.settings",
    "src.models",
    "src.api.openai_client",
]
# Allow Pydantic and tenacity decorators without type stubs
disallow_untyped_decorators = false
# Allow subclassing from Pydantic base classes
disallow_subclassing_any = false
